# gba_rust

./: .gitignore  1.js  Cargo.toml  README.md  index.html  index.js
core/: Cargo.toml
core/src/: algorithm.rs  apu.rs  bus.rs  config.rs  cp15.rs  cpu.rs  dma_channel.rs  gba.rs  input_handler.rs  lib.rs  ppu.rs  spi.rs  timer.rs  util.rs
frontends/android/: .gitignore  build.gradle  build.sh
frontends/android/app/: build.gradle
frontends/android/app/src/main/: AndroidManifest.xml
frontends/android/app/src/main/assets/www/: index.html  script.js  style.css
frontends/android/app/src/main/java/com/example/gba/: MainActivity.java
frontends/backend-only/: Cargo.toml
frontends/backend-only/src/: main.rs
frontends/desktop-native/: Cargo.toml
frontends/desktop-native/src/: config.rs  frontend.rs  logger.rs  main.rs
frontends/headless/: Cargo.toml
frontends/headless/src/: main.rs
frontends/wasm/: Cargo.toml  README.md  build.py  index.html  index.js  package-lock.json  package.json  webpack.config.js
frontends/wasm/js/: index.js
frontends/wasm/src/: lib.rs  util.rs
frontends/wasm/static/: index.html
sim/: Cargo.toml
sim/src/: lib.rs  main.rs
src/: apu.rs  bus.rs  config.rs  cpu.rs  dma_channel.rs  fast_hasher.rs  frontend.rs  gba.rs  input_handler.rs  key_input.rs  main.rs  ppu.rs  timer.rs
test_roms/: out.txt
