[workspace]

members = [
    "core",
    "sim",
    "frontends/desktop-native",
    "frontends/wasm",
    "frontends/headless",
]

default-members = [
    "frontends/desktop-native"
]

[profile.dev]
overflow-checks = false

[profile.release]
lto = "thin"
opt-level = 3

[profile.release-symbols]
inherits = "release"
lto = false
opt-level = 3
debug = true

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.release-lto.package."*"]
opt-level = 3