[package]
name = "gba-core"
version = "0.1.0"
authors = ["Zhizhou Ma <zm9913@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bug: APU does not work with higher rubato versions for some reason
rubato = "=0.12.0"
log = "0.4.*"

[features]
debug_instr = []
print_cps = []