[package]
name = "gba-rust-wasm"
description = "wasm frontend for gba-rust"
version = "0.1.0"
authors = ["Zhizhou Ma <zm9913@gmail.com>"]
categories = ["wasm"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.*"
js-sys = "0.3.*"
gba-core = {path = "../../core"}

[dependencies.web-sys]
version = "0.3.72"
features = [
    "console", 
    "Window", 
    "HtmlCanvasElement",
    "CanvasRenderingContext2d", 
    "HtmlInputElement", 
    "HtmlButtonElement", 
    "HtmlDivElement",
    "AudioContext", 
    "AudioBuffer", 
    "Document", 
    "AudioDestinationNode", 
    "AudioBufferSourceNode", 
    "EventListener", 
    "Blob", 
    "FileReader", 
    "FileList", 
    "File",
    "ImageData",
    "Event"
]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"
